Adding openapi realization
